@@ -9,4 +9,4 @@ Twitter: @DPRamone
 IM: skylord@jabber.ccc.de
 PGP Key: 0xBA8E1E8C/5F25 B1D8 F22B E88F 8FF3  C5A7 6AB2 5603 BA8E 1E8C
 
-TAILS, OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Martus, Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage, Shamir's Secret Sharing Scheme, Tor Messenger, Linux Malware Detect, AIDE, Rootkit Hunter, Horcrux, GostCrypt, TrueCrypt, Veracrypt and Zulucrypt developed and copyrighted by their respective authors and owners. None of these are included in the "TAILS Candy" package but are downloaded on demand by their respective installer/update scripts.
+TAILS, OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Paranoia Text & File Encryption, Martus, Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage, Shamir's Secret Sharing Scheme, Tor Messenger, Linux Malware Detect, AIDE, Rootkit Hunter, Horcrux, GostCrypt, TrueCrypt, Veracrypt and Zulucrypt developed and copyrighted by their respective authors and owners. None of these are included in the "TAILS Candy" package but are downloaded on demand by their respective installer/update scripts.
