@@ -128,8 +128,8 @@ Name[fr_CA]=Gostcrypt 1.0
 Comment=Truecrypt successor with GOST
 Type=Application
 Terminal=false
-Path=/home/amnesia/Persistent/bin
-Exec=/home/amnesia/Persistent/bin/gostcrypt
+Path=/home/amnesia/bin
+Exec=/home/amnesia/bin/gostcrypt
 Icon=/home/amnesia/Persistent/Packages/Settings/Gnome/icons/GostCrypt-16x16.xpm
 Categories=Security;Encryption;
 StartupNotify=true
