@@ -1,0 +1,12 @@
+#!/usr/bin/env xdg-open
+[Desktop Entry]
+Version=1.0
+Encoding=UTF-8
+Type=Application
+Terminal=true
+Icon[en_US]=gnome-app-install
+Name[en_US]=Install SSE Text & File Encryption 12R1C
+Comment=Install Paranoia SSE Text & File Encryption 12R1C
+Exec=/home/amnesia/Persistent/Packages/install_PTESSE.sh
+Name=Install SSE Text & File Encryption 12R1C
+Icon=gnome-app-install
