@@ -5,6 +5,11 @@ CHANGELOG
 IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
 *********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		
 
+December 12th 2015
+******************
+
+- Added Paranoia Text & File Encryption 12R1C
+
 December 11th 2015
 ******************
 
